--- a/Book/3.4事件机制EventSystem.md
+++ b/Book/3.4事件机制EventSystem.md
@@ -116,7 +116,7 @@ ET提供了多种事件，事件都是可以多次订阅的:
 9. 除此之外还有很多事件，例如消息事件。消息事件使用MessageHandler来声明，可以带参数指定哪种服务器需要订阅。
 ```csharp
 	[MessageHandler(AppType.Gate)]
-	public class C2G_LoginGateHandler : AMRpcHandler<C2G_LoginGate, G2C_LoginGate>
+	public class C2G_LoginGateHandler : BaseRpcMessageHandler<C2G_LoginGate, G2C_LoginGate>
 	{
 		protected override void Run(Session session, C2G_LoginGate message, Action<G2C_LoginGate> reply)
 		{
